--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body{
+  background-color: #0E0412;
+}
+
+
+.MuiPaginationItem-circular{
+  color: rgba(140, 140, 140, 1) !important;
+ 
+} 
+.MuiPaginationItem-page{
+  color: rgba(140, 140, 140, 1) !important;
+  
+}  
